--- a/src/main/resources/templates/title.html
+++ b/src/main/resources/templates/title.html
@@ -64,6 +64,7 @@
                         <li sec:authorize="hasRole('ADMIN')"><span class="dropdown-item">Administrátor</span> </li>
                         <li sec:authorize="hasRole('LIBRARIAN')"><span class="dropdown-item">Knihovník</span> </li>
                         <li sec:authorize="hasRole('READER')"><span class="dropdown-item">Čtenář</span> </li>
+                        <li sec:authorize="hasRole('DISTRIBUTOR')"><span class="dropdown-item">Distributor</span> </li>
 
                         <li sec:authorize="hasRole('READER')"><a class="dropdown-item" href="#">Moje rezervace</a></li>
                         <li>
