--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -26,7 +26,7 @@
                 <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
                     <li sec:authorize="isAnonymous()">
                         <a href="/login" class="nav-link px-0 align-middle text-light">
-                            <i class="fs-4 bi-unlock"></i> <span class="ms-1 d-none d-sm-inline">Přihlášní</span></a>
+                            <i class="fs-4 bi-unlock"></i> <span class="ms-1 d-none d-sm-inline">Přihlášení</span></a>
                     </li>
                     <li sec:authorize="isAnonymous()">
                         <a href="/register" class="nav-link px-0 align-middle text-light">
@@ -50,11 +50,15 @@
                     </li>
                     <li sec:authorize="hasAnyRole('ADMIN', 'READER', 'LIBRARIAN')">
                         <a href="/votes" class="nav-link px-0 align-middle text-light">
-                            <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">Hlasováni</span></a>
+                            <i class="fs-4 bi-hand-thumbs-up"></i> <span class="ms-1 d-none d-sm-inline">Hlasováni</span></a>
                     </li>
                     <li sec:authorize="hasAnyRole('ADMIN', 'LIBRARIAN')">
                         <a href="/reservations/createLoan" class="nav-link px-0 align-middle text-light">
-                            <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">Výpůjčka</span></a>
+                            <i class="fs-4 bi-journal-check"></i> <span class="ms-1 d-none d-sm-inline">Výpůjčky</span></a>
+                    </li>
+                    <li sec:authorize="hasAnyRole('ADMIN', 'DISTRIBUTOR')">
+                        <a href="/orders" class="nav-link px-0 align-middle text-light">
+                            <i class="fs-4 bi-list-check"></i> <span class="ms-1 d-none d-sm-inline">Objednávky</span></a>
                     </li>
                 </ul>
                 <hr>
@@ -159,7 +163,7 @@
                         <td sec:authorize="hasRole('ADMIN')">
                             <a th:href="${'/book/' + book.id}">
                                 <button class="btn btn-info">
-                                    Edit
+                                    Editovat
                                 </button>
                             </a>
                             <a th:href="${'/book/' + book.id + '/delete'}">
@@ -171,7 +175,7 @@
                         <td sec:authorize="hasRole('LIBRARIAN')" th:if="${book.libraryId == librarian_lib}">
                             <a th:href="${'/book/' + book.id}">
                                 <button class="btn btn-info">
-                                    Edit
+                                    Editovat
                                 </button>
                             </a>
                             <a th:href="${'/book/' + book.id + '/delete'}">
