--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -113,7 +113,7 @@
                     </div>
                     <div class="col-md-4 col-sm-6">
                         <label class="form-check-label" for="rating_input">Hodnocení</label>
-                        <input type="number" class="form-control" id="rating_input" min="1" max="10" th:name="genre" th:value="${genre}"/>
+                        <input type="number" class="form-control" id="rating_input" min="1" max="10" th:name="rate" th:value="${rate}"/>
                     </div>
                     <div class="col-md-4 col-sm-6 mt-4">
                         <div class="form-check form-switch \">
